feat: deleted option
